[package]
name = "XML_to_JSON_Parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parser that converts simple XML language text to a string in JSON format written on Rust."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
peg = "0.8.5"
pest = "2.8.3"
pest_derive = "2.8.3"
serde_json = "1.0.145"